--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
 # idea
 out
 *.ipr
@@ -10,8 +18,10 @@ build
 .gradle
 
 # other
+eclipse
 run
 runs
 run-data
 
-repo
+# Files from Forge MDK
+forge*changelog.txt
