バージョンを変更

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ emi_version_range=[1.1,)
 mod_id=gaming_emi
 mod_name=Gaming EMI
 mod_license=MIT
-mod_version=1.0.0
+mod_version=1.0.1-1.21.1
 mod_group_id=com.mochi_753.gaming_emi
 mod_authors=Mochi_753
 mod_description=Makes the EMI search bar always rainbow colored. Removes the "jeb_" Easter egg condition. Client-side only.
